--- a/vite/remote/package.json
+++ b/vite/remote/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview --port 5003 --strictPort"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.3.1"
   },
   "devDependencies": {
     "@originjs/vite-plugin-federation": "^1.2.2",
